--- a/src/app/pages/template-message-management/template-message/index/template-message.component.scss
+++ b/src/app/pages/template-message-management/template-message/index/template-message.component.scss
@@ -56,8 +56,9 @@
     }
     
     .body-delete {
-      width: 50px;
+      width: 130px;
       height: 100px;
+      color: #888;
       mat-icon {
         color: #888;
       }
@@ -71,7 +72,7 @@
 
 .footer {
   .add {
-    width: 140px;
+    width: 160px;
     border-radius: 3px !important;
     padding: 0 !important;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.35);
