fix: Qiscus - Manajemen Template Pesan #3 - bug fix on reset to default

--- a/src/app/pages/template-message-management/template-message/index/template-message.component.html
+++ b/src/app/pages/template-message-management/template-message/index/template-message.component.html
@@ -35,7 +35,7 @@
                         <mat-icon (click)="onDeleteTemplate(item, i, 'wholesaler')">delete</mat-icon>
                       </div> -->
                         <div class="body-delete pl-8" fxLayout="row" fxLayoutAlign="center center">
-                          <mat-icon (click)="resetToDefault(i, 'retailer')">refresh</mat-icon>
+                          <mat-icon (click)="resetToDefault(i, 'wholesaler')">refresh</mat-icon>
                           Reset to default
                         </div>
                     </div> 
