update harga on the go - 11

--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -209,7 +209,7 @@
                         </button>
                       </div>
                     </div>
-                    <div fxFlex="80" class="py-2" fxLayout="row" fxLayoutAlign="space-between center" fxFlex="1 0 auto"
+                    <div fxFlex="80" class="py-2" fxLayout="row" fxFlex="1 0 auto"
                       *ngIf="item.get('typeSelection').value['value'] == 'stock_check'">
                       <!-- <mat-radio-group fxFlex="50" aria-labelledby="example-radio-group-label"
                         class="example-radio-group" [formControl]="stockOptionCtrl">
