--- a/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
+++ b/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
@@ -57,14 +57,16 @@
                 <div fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column"
                   fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
                   <h3>
-                    <mat-slide-toggle formControlName="is_verification_toggle">Perlu Verifikasi</mat-slide-toggle>
+                    <mat-slide-toggle formControlName="is_verification_toggle" (change)="isVerif($event, i)">Perlu
+                      Verifikasi</mat-slide-toggle>
                   </h3>
                   <h3>
                     <mat-slide-toggle formControlName="is_backup" (change)="backupTask($event, i)">Backup Task?
                     </mat-slide-toggle>
                   </h3>
                   <h3>
-                    <mat-slide-toggle formControlName="is_verification">Push to FF?</mat-slide-toggle>
+                    <mat-slide-toggle formControlName="is_verification" (change)="isVerifFieldForce($event, i)">Push to
+                      FF?</mat-slide-toggle>
                   </h3>
                 </div>
               </div>
