--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -264,6 +264,11 @@
               </mat-error>
             </div>
           </div>
+          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+            <mat-form-field fxFlex="50" class="is-light form-primary">
+              <input matInput placeholder="Apps Version" formControlName="version">
+            </mat-form-field>
+          </div>
 
           <div class="ayo-top" fxLayout="row" fxLayoutAlign="space-between center">
             <h3>Daftar Consumer</h3>
