--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -12,10 +12,17 @@
 
       <form class="mat-elevation-z4 mr-24 mb-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto" name="form"
         [formGroup]="templateTaskForm" (keydown.enter)="$event.preventDefault();">
-        <div class="px-24 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center">
+        <div class="px-24 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center"
+          style="margin-top: 5px;">
 
           <div fxFlex class="py-16 h3">Pertanyaan</div>
-
+          <div fxFlex="60" fxLayoutAlign="flex-end flex-end">
+            <mat-form-field fxFlex="50" class="is-light form-primary">
+              <mat-select [formControl]="frmIsBranching" placeholder="Reponse Type">
+                <mat-option *ngFor="let item of listCategoryResponse" [value]="item.value">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
         </div>
 
         <div class="p-24">
@@ -198,14 +205,24 @@
                         <mat-icon class="secondary-text" fxFlex="5">{{item.get('typeSelection').value['value'] ===
                           'radio' ?
                           'radio_button_unchecked' : 'check_box_outline_blank'}}</mat-icon>
-                        <mat-form-field [fxFlex]="item.get('typeSelection').value['value'] === 'radio' ? 30 : 85"
+                        <mat-form-field
+                          [fxFlex]="item.get('typeSelection').value['value'] === 'radio' && frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === true ? 30 : 85"
                           class="opsi is-light">
                           <input class="option" matInput formControlName="option" (focus)="$event.target.select()"
                             (change)="defaultValue($event, 'questions', 'Opsi ', i, j)">
                         </mat-form-field>
-                        <div fxFlex="2" *ngIf="item.get('typeSelection').value['value'] === 'radio'"></div>
-                        <mat-form-field *ngIf="item.get('typeSelection').value['value'] === 'radio'" fxFlex="50"
-                          class="opsi is-light">
+                        <div fxFlex="1" *ngIf="item.get('typeSelection').value['value'] === 'radio'">
+                        </div>
+                        <div fxFlex="2"
+                          *ngIf="item.get('typeSelection').value['value'] === 'radio' && frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === false">
+                          <mat-icon style="color: #4A90E2; cursor: pointer;" (click)="showNextQuestion(i, j)">add_circle
+                          </mat-icon>
+                        </div>
+                        <div fxFlex="2" *ngIf="item.get('typeSelection').value['value'] === 'radio'">
+                        </div>
+                        <mat-form-field
+                          *ngIf=" item.get('typeSelection').value['value']==='radio' && frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === true"
+                          fxFlex="48" class="opsi is-light">
                           <mat-select formControlName="next_question" placeholder="Next Question Possibility">
                             <mat-option value="" (click)="onPossibilitiesChange('none', i, j)">None</mat-option>
                             <mat-option
@@ -213,9 +230,18 @@
                               [value]="possibility.id" (click)="onPossibilitiesChange(possibility, i, j)">
                               {{ possibility.question }}
                             </mat-option>
+                            <mat-option value="-99" (click)="onPossibilitiesChange('-99', i, j)">Selesai</mat-option>
                           </mat-select>
                         </mat-form-field>
-                        <div fxFlex="10"></div>
+                        <div fxFlex="2"
+                          *ngIf="item.get('typeSelection').value['value'] === 'radio' && frmIsBranching.value === true">
+                        </div>
+                        <div fxFlex="2"
+                          *ngIf="item.get('typeSelection').value['value'] === 'radio' && frmIsBranching.value === true && allQuestionList[i]['possibilities'][j]['isBranching'] === true">
+                          <mat-icon style="color: red;cursor: pointer;" (click)="showNextQuestion(i, j)">remove_circle
+                          </mat-icon>
+                        </div>
+                        <div fxFlex="6"></div>
                         <button *ngIf="item.get('additional').value.length > 1" (click)="deleteAdditional(i, j)"
                           mat-icon-button fxFlex="5" matTooltip="Hapus" matTooltipPosition="below"
                           class="secondary-text">
